--- a/index.html
+++ b/index.html
@@ -235,12 +235,30 @@
             letter-spacing: -0.5px;
         }
 
+        /* Enhanced styling for the revealed name */
         .name-reveal h2 {
-            color: var(--holiday-green);
-            font-size: 2em;
+            color: var(--holiday-red);
+            font-size: 1.8em;
             margin: 20px 0;
-            letter-spacing: -1px;
+            padding: 15px;
+            background: linear-gradient(135deg, rgba(228, 201, 136, 0.2), rgba(228, 201, 136, 0.1));
+            border: 2px solid var(--gold);
+            border-radius: 12px;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            transform: scale(1);
+            transition: transform 0.3s ease;
+            animation: glow 2s infinite alternate;
+        }
+
+        @keyframes glow {
+            from {
+                box-shadow: 0 0 5px var(--gold),
+                           0 0 10px var(--gold);
+            }
+            to {
+                box-shadow: 0 0 10px var(--gold),
+                           0 0 20px var(--gold);
+            }
         }
 
         /* New footer styles */
@@ -260,125 +278,72 @@
         @media (max-width: 768px) {
             body {
                 padding: 10px;
+                font-size: 14px; /* Base font size reduced for mobile */
             }
 
             .container {
-                padding: 20px 15px;
-                margin: 10px 0;
-                width: calc(100% - 20px);
-                max-width: none;
-            }
-
-            .participant-grid {
-                grid-template-columns: 1fr;
-                gap: 10px;
+                padding: 15px;
             }
 
             h1 {
-                font-size: 1.8em;
+                font-size: 1.6em;
                 margin-bottom: 20px;
             }
 
             .section-heading {
-                font-size: 1.1em;
-                margin: 15px 0 10px;
-            }
-
-            .input-group {
-                margin: 15px 0;
+                font-size: 1em;
             }
 
             input {
-                padding: 10px;
-                font-size: 16px; /* Prevents zoom on iOS */
+                font-size: 14px;
+                padding: 8px 12px;
             }
 
             button {
-                padding: 12px 20px;
-                font-size: 16px;
-                margin: 10px 0;
-            }
-
-            .link-item {
-                padding: 12px;
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .link-text {
-                margin-bottom: 10px;
-                margin-right: 0;
-                width: 100%;
-                word-break: break-all;
-            }
-
-            .copy-btn {
-                align-self: flex-end;
-            }
-
-            .gift-box {
-                font-size: 80px;
-            }
-
-            .name-reveal {
-                font-size: 16px;
-                margin: 20px 10px;
-            }
-
-            .name-reveal h2 {
-                font-size: 1.6em;
-            }
-
-            .student-item {
-                padding: 10px;
+                font-size: 14px;
+                padding: 10px 20px;
             }
 
             .student-item label {
-                font-size: 14px;
-                line-height: 1.3;
+                font-size: 13px;
             }
 
-            /* Touch-friendly adjustments */
-            .student-item input[type="checkbox"] {
-                width: 24px;
-                height: 24px;
-                margin-right: 10px;
+            .link-item {
+                font-size: 13px;
             }
 
-            .copy-btn {
-                width: 44px;
-                height: 44px;
-            }
-
-            /* Improved spacing for touch targets */
-            button, 
-            .copy-btn,
-            .student-item,
-            input[type="checkbox"] {
-                min-height: 44px; /* iOS minimum touch target size */
+            .gift-label {
+                font-size: 0.9em;
             }
         }
 
-        /* Additional adjustments for very small screens */
-        @media (max-width: 360px) {
-            h1 {
-                font-size: 1.5em;
+        @media (max-width: 768px) {
+            .name-reveal {
+                font-size: 14px;
             }
 
-            .container {
-                padding: 15px 10px;
+            .name-reveal h2 {
+                font-size: 1.5em;
+                padding: 12px;
             }
 
             .gift-box {
                 font-size: 60px;
             }
+        }
 
-            .name-reveal {
-                font-size: 14px;
+        @media (max-width: 360px) {
+            body {
+                font-size: 13px;
+            }
+
+            h1 {
+                font-size: 1.4em;
             }
 
             .name-reveal h2 {
-                font-size: 1.4em;
+                font-size: 1.3em;
+                padding: 10px;
             }
         }
 
